# bang

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
bench/: README.md  fib.py  fib_par.bang  fib_seq.bang  loop_par.bang  loop_seq.bang
docs/: GUIDE.md  SPEC.md  TUTORIAL.md
editors/vscode-bang/: bang-lang-0.1.0.vsix  extension.js  language-configuration.json  package.json
editors/vscode-bang/snippets/: bang.json
editors/vscode-bang/syntaxes/: bang.tmLanguage.json
examples/: channels.bang  closures.bang  concurrency_demo.bang  conditionals.bang  error_handling.bang  event_loop.bang  fibonacci.bang  hello.bang  higher_order.bang  http_server.bang  json_demo.bang  list_traversal.bang  map_usage.bang  parallel_block.bang  recursion.bang  regex_demo.bang  spawn_basic.bang  string_ops.bang  type_hints.bang
src/: ast.rs  compiler.rs  interpreter.rs  lib.rs  main.rs  parser.rs  pkg.rs  reactor.rs  regex.rs  resolver.rs  runtime.rs  scheduler.rs  stdlib.rs  typeck.rs  vm.rs
src/codegen/: jit.rs  mod.rs  transpile.rs
src/lexer/: mod.rs  token.rs
tests/: binary_test.rs  cli_test.rs  event_server_test.rs  import_test.rs  interpreter_test.rs  lexer_test.rs  parser_test.rs  resolver_test.rs  transpile_test.rs  vm_test.rs
