[package]
name = "bang"
version = "0.18.0"
edition = "2021"
description = "Bang 프로그래밍 언어 컴파일러/런타임"
license = "MIT"
readme = "README.md"
repository = "https://github.com/knoxxr/bang"
homepage = "https://github.com/knoxxr/bang"
keywords = ["language", "interpreter", "compiler", "vm", "concurrency"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "bang"
path = "src/main.rs"

[lib]
name = "bang"
path = "src/lib.rs"

[dependencies]
# Phase 9 Part B: Cranelift JIT (선택적 기능 — `--features jit` 빌드 시 활성화)
cranelift-codegen  = { version = "0.109", optional = true }
cranelift-jit      = { version = "0.109", optional = true }
cranelift-module   = { version = "0.109", optional = true }
cranelift-frontend = { version = "0.109", optional = true }
cranelift-native   = { version = "0.109", optional = true }

[features]
default = []
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-frontend",
    "dep:cranelift-native",
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
